hide recaptcha badge

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1585,3 +1585,8 @@ button {
   align-items: center;
   gap: 8px;
 }
+
+.grecaptcha-badge {
+  /* hiding badge, added proper attribution in footer */
+  visibility: hidden !important;
+}
